--- a/styles.css
+++ b/styles.css
@@ -1,41 +1,17 @@
-/* Base styles for the body and html */
-html, body {
-    margin: 0;
-    padding: 0;
+body, html {
     height: 100%;
-    width: 100%;
-    overflow: hidden;
-}
-
-/* Background and overlay styles */
-body {
-    background: tosca;
-    background-image: url('https://raw.githubusercontent.com/noy2high/comit/main/images/background.png');
-    background-size: cover;
-    background-repeat: repeat-y;
-    background-color: tosca; /* fallback color */
-}
-
-#content {
-    position: relative;
-    z-index: 1;
+    margin: 0;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
-    width: 100vw;
-}
-
-#content img {
-    max-width: 90%;
-    max-height: 90%;
+    background-color: #2F4F4F;
+    background-image: url('https://raw.githubusercontent.com/noy2high/comit/main/images/background.png');
+    background-size: cover;
+    background-position: center;
+    background-repeat: repeat-y;
 }
 
 #loader {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
     width: 50px;
     aspect-ratio: 1;
     color: #dc1818;
@@ -59,20 +35,28 @@ body {
 }
 
 @keyframes l3 {
-    to {
-        transform: scale(1.8);
-        opacity: 0;
-    }
+    to {transform: scale(1.8); opacity: 0}
 }
 
-/* Overlay for darkening effect */
+#content {
+    display: none;
+    position: relative;
+    text-align: center;
+    margin-top: 20px;
+}
+
+#orphicImage {
+    width: 80%;
+    max-width: 400px;
+    height: auto;
+}
+
 .overlay {
     position: fixed;
     top: 0;
     left: 0;
-    width: 100vw;
-    height: 100vh;
-    background-color: black;
-    opacity: 0.75;
-    z-index: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.75);
+    z-index: 1;
 }
