--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,17 @@ body, html {
     background-size: cover;
     background-position: center;
     background-repeat: repeat-y;
+    overflow: hidden;
+}
+
+#overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.75);
+    z-index: 1;
 }
 
 #loader {
@@ -23,6 +34,7 @@ body, html {
     background-size: 50% 50%;
     background-repeat: no-repeat;
     position: relative;
+    z-index: 2;
 }
 
 #loader:after {
@@ -42,21 +54,11 @@ body, html {
     display: none;
     position: relative;
     text-align: center;
-    margin-top: 20px;
+    z-index: 3;
 }
 
 #orphicImage {
     width: 80%;
     max-width: 400px;
     height: auto;
-}
-
-.overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.75);
-    z-index: 1;
 }
