--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,9 @@
 body {
     margin: 0;
     padding: 0;
-    overflow: hidden; /* Prevent scroll while loading */
+    overflow: hidden;
+    background: url('https://raw.githubusercontent.com/noy2high/comit/main/images/background.png') no-repeat center center fixed;
+    background-size: cover;
 }
 
 #loader {
@@ -10,11 +12,11 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.75); /* Black overlay with 75% opacity */
+    background-color: rgba(0, 0, 0, 0.75);
     display: flex;
     align-items: center;
     justify-content: center;
-    z-index: 1000; /* Ensure loader is above all other content */
+    z-index: 1000;
 }
 
 .loader {
@@ -49,7 +51,7 @@ body {
 
 #content {
     position: absolute;
-    top: 50%;
+    top: 40%;
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center;
@@ -57,12 +59,6 @@ body {
 }
 
 #content img {
-    max-width: 80%; /* Adjust as needed */
-    max-height: 80vh; /* Adjust as needed */
-}
-
-/* Background settings */
-body {
-    background: url('https://raw.githubusercontent.com/noy2high/comit/main/images/background.png') no-repeat center center fixed;
-    background-size: cover; /* Cover the entire background */
+    max-width: 80%;
+    max-height: 80vh;
 }
