--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
 .loader {
     width: 50px;
     aspect-ratio: 1;
-    color:#5efc58;
+    color: #5efc58;
     background:
         radial-gradient(circle at 60% 65%, currentColor 62%, #0000 65%) top left,
         radial-gradient(circle at 40% 65%, currentColor 62%, #0000 65%) top right,
@@ -37,6 +37,7 @@
     background-color: rgba(0, 0, 0, 0.75); /* 75% opacity */
     background-image: url('https://raw.githubusercontent.com/noy2high/comit/main/images/background.png');
     background-size: cover;
+    background-position: center;
     background-repeat: no-repeat;
     z-index: -1;
 }
@@ -68,4 +69,36 @@
     align-items: center;
     justify-content: center;
     height: 100vh;
+}
+
+/* Falling Images */
+@keyframes fall {
+    0% {
+        transform: translateY(-100px);
+        opacity: 0;
+    }
+    50% {
+        opacity: 1;
+    }
+    100% {
+        transform: translateY(100vh);
+        opacity: 0;
+    }
+}
+
+.falling-image {
+    position: absolute;
+    top: -100px;
+    width: 10%;
+    animation: fall 10s infinite linear;
+    z-index: 1;
+}
+
+.falling-image:nth-child(odd) {
+    left: 10%;
+    animation-duration: 8s;
+}
+.falling-image:nth-child(even) {
+    left: 80%;
+    animation-duration: 12s;
 }
