--- a/styles.css
+++ b/styles.css
@@ -51,6 +51,7 @@ body {
     position: absolute;
     width: 50px;
     height: 50px;
+    object-fit: cover;
 }
 
 /* Stage 2 */
@@ -69,7 +70,7 @@ body {
 
 #orphic-image {
     position: absolute;
-    top: 10%;
+    top: 5%;
     max-width: 80%;
     max-height: 30%;
     z-index: 2;
@@ -77,6 +78,7 @@ body {
 
 #buka-aku {
     position: absolute;
+    top: 50%;
     max-width: 40%;
     max-height: 20%;
     z-index: 2;
