--- a/styles.css
+++ b/styles.css
@@ -4,12 +4,13 @@ body, html {
     padding: 0;
     overflow: hidden;
     height: 100%;
+    background-color: #269144;
 }
 
 /* Loading animation */
 .loader {
     width: 50px;
-    aspect-ratio: 1;
+    height: 50px;
     color: #5efc58;
     background:
         radial-gradient(circle at 60% 65%, currentColor 62%, #0000 65%) top left,
@@ -18,7 +19,7 @@ body, html {
         linear-gradient(to bottom right, currentColor 42%, #0000 43%) bottom right;
     background-size: 50% 50%;
     background-repeat: no-repeat;
-    position: absolute;
+    position: fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -36,22 +37,6 @@ body, html {
 
 @keyframes l3 {
     to { transform: scale(1.8); opacity: 0; }
-}
-
-/* Background and image styling */
-body {
-    background-color: #269144;
-    background-image: url('https://raw.githubusercontent.com/noy2high/comit/main/images/background.png');
-    background-size: cover;
-    background-position: center;
-    position: relative;
-}
-
-#falling-images img {
-    position: absolute;
-    width: 50px;
-    height: 50px;
-    object-fit: cover;
 }
 
 /* Stage 2 */
@@ -78,10 +63,19 @@ body {
 
 #buka-aku {
     position: absolute;
-    top: 50%;
     max-width: 40%;
     max-height: 20%;
     z-index: 2;
+}
+
+#falling-images {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    pointer-events: none;
 }
 
 .hidden {
