--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,11 @@ body, html {
     width: 100%;
     height: 100%;
     overflow: hidden;
+    background-color: #008080; /* Main color layer */
+    background-image: url('images/background.png'); /* Background image */
+    background-size: cover;
+    background-position: center;
+    position: relative;
 }
 
 /* Stage 1: Loading Screen */
@@ -14,7 +19,7 @@ body, html {
     align-items: center;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.75);
+    background-color: rgba(0, 0, 0, 0.75); /* Black overlay */
     position: absolute;
     top: 0;
     left: 0;
@@ -52,20 +57,16 @@ body, html {
 
 /* Stage 2 */
 #stage-2 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-color: rgba(0, 0, 0, 0.75);
     z-index: 5; /* Below loading screen */
-    background-image: linear-gradient(rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)), url('images/background.png');
-    background-size: cover;
-    background-position: center;
 }
 
 .orphic-image {
@@ -87,15 +88,4 @@ body, html {
     width: 100%;
     height: 100%;
     overflow: hidden;
-}
-
-.falling-image {
-    position: absolute;
-    width: 80px;
-    animation: fall linear infinite;
-}
-
-@keyframes fall {
-    from { top: -100px; opacity: 1; }
-    to { top: 100%; opacity: 0; }
 }
